# protrust-hack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  azure-pipelines.yml  rust-toolchain
.cargo/: config
examples/: addressbook.rs  reflection.rs
protos/: unittest.proto  unittest_proto3.proto
samples/addressbook/: main.rs
src/: collections.rs  descriptor.rs  extend.rs  internal.rs  io.rs  lib.rs  main.rs  reflect.rs
src/generator/: generators.rs  mod.rs  names.rs  printer.rs
src/libprotrust/: Cargo.toml
src/libprotrust-gen/: Cargo.toml
src/libprotrust-gen/src/: names.rs
src/libprotrust/examples/: addressbook.rs
src/libprotrust/src/: io.rs  lib.rs
src/plugin/: mod.rs  names.rs
src/reflect/: access.rs  dynamic.rs  mod.rs
src/wkt/: any.rs  duration.rs  field_mask.rs  mod.rs  timestamp.rs
tests/: roundtrip.rs  sanity.rs
tests/shared/: mod.rs  util.rs
tools/conformance/: Cargo.toml  build.rs
tools/conformance/src/: main.rs
