[package]
name = "protrust"
version = "0.1.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2018"

[[bin]]
name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust/main.rs"
doc = false
required-features = ["plugin"]

[features]
default = ["reflection", "json", "plugin"]

# Reflection is optional, you can remove reflection if you are only using LITE_RUNTIME files
reflection = []

# Proto3 JSON mapping is optional, you can remove JSON mapping if unused or if using proto2 files exclusively
json = ["base64"]

# Use checked addition in calculate_size methods
checked_size = []

# Includes utility modules for writing protoc plugins
plugin = ["pulldown-cmark"]

[dependencies]
base64 = { version = "0.10.*", optional = true }
pulldown-cmark = { version = "0.2.0", optional = true, default-features = false }