[package]
name = "protrust"
version = "0.1.0"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2018"

[[bin]]
name = "protoc-gen-rust"
path = "src/bin/protoc-gen-rust/main.rs"
doc = false
required-features = ["plugin"]

[features]
default = ["reflection", "json", "plugin", "chrono-time"]

# Reflection is optional, you can remove reflection if you are only using LITE_RUNTIME files
reflection = ["fnv"]

# Proto3 JSON mapping is optional, you can remove JSON mapping if unused or if using proto2 files exclusively
json = ["base64", "reflection"]

# Use checked addition in calculate_size methods
checked_size = []

# Includes utility modules for writing protoc plugins
plugin = ["reflection", "pulldown-cmark", "quote", "syn", "proc-macro2", "itertools", "heck"]

# Methods for converting to and from chrono structures in google.protobuf.Timestamp and google.protobuf.Duration
chrono-time = ["chrono", "reflection"]

[dependencies]
fnv = { version = "1.0.6", optional = true }
chrono = { version = "0.4", optional = true }
base64 = { version = "0.10.*", optional = true }
pulldown-cmark = { version = "0.5.*", optional = true }
proc-macro2 = { version = "*", optional = true }
quote = { version = "0.6", optional = true }
syn = { version = "0.15.*", optional = true, features = ["full"] }
itertools = { version = "0.8.*", optional = true }
heck = { version = "0.3.*", optional = true }